Bug 237689 - crash after copy then edit
Summary: crash after copy then edit
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 243539 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-15 06:23 UTC by David Herbert
Modified: 2010-07-05 14:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Herbert 2010-05-15 06:23:13 UTC
Version:            (using KDE 4.4.3)
OS:                Linux
Installed from:    Debian testing/unstable Packages

To reproduce the crash you need at least two contacts in an address book then:
1. right click on a contact and select copy
2. right click on a different contact and select copy
3. right click on the contact copied in step 1 and select edit

Here's the backtrace:
Application: KAddressBook (kaddressbook), signal: Segmentation fault
[KCrash Handler]
#6  QModelIndex (this=0x933a530, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfe203e8) at /usr/include/qt4/QtCore/qabstractitemmodel.h:65
#7  Akonadi::StandardContactActionManager::Private::editTriggered (this=0x933a530, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfe203e8) at ../../kaddressbook/standardcontactactionmanager.cpp:155
#8  Akonadi::StandardContactActionManager::qt_metacall (this=0x933a530, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfe203e8) at ./standardcontactactionmanager.moc:90
#9  0xb6466aea in QMetaObject::metacall (object=0x933a530, cl=3055391680, idx=7, argv=0xbfe203e8) at kernel/qmetaobject.cpp:237
#10 0xb64750b5 in QMetaObject::activate (sender=0x94094f0, m=0xb724ca18, local_signal_index=1, argv=0xbfe203e8) at kernel/qobject.cpp:3293
#11 0xb69222e9 in QAction::triggered (this=0x94094f0, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#12 0xb69244dc in QAction::activate (this=0x94094f0, event=QAction::Trigger) at kernel/qaction.cpp:1255
#13 0xb6dc3b2c in QMenuPrivate::activateCausedStack (this=0x94247a0, causedStack=..., action=0x94094f0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1011
#14 0xb6dc9fdb in QMenuPrivate::activateAction (this=0x94247a0, action=0x94094f0, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1103
#15 0xb6dcafe7 in QMenu::mouseReleaseEvent (this=0x9422ad0, e=0xbfe20d44) at widgets/qmenu.cpp:2312
#16 0xb75c89f5 in KMenu::mouseReleaseEvent (this=0x9422ad0, e=0xbfe20d44) at ../../kdeui/widgets/kmenu.cpp:471
#17 0xb6986e78 in QWidget::event (this=0x9422ad0, event=0xbfe20d44) at kernel/qwidget.cpp:7998
#18 0xb6dcc5ec in QMenu::event (this=0x9422ad0, e=0xbfe20d44) at widgets/qmenu.cpp:2414
#19 0xb6928bec in QApplicationPrivate::notify_helper (this=0x923db10, receiver=0x9422ad0, e=0xbfe20d44) at kernel/qapplication.cpp:4300
#20 0xb69300f7 in QApplication::notify (this=0xbfe22658, receiver=0x9422ad0, e=0xbfe20d44) at kernel/qapplication.cpp:3865
#21 0xb74d37da in KApplication::notify (this=0xbfe22658, receiver=0x9422ad0, event=0xbfe20d44) at ../../kdeui/kernel/kapplication.cpp:302
#22 0xb64618eb in QCoreApplication::notifyInternal (this=0xbfe22658, receiver=0x9422ad0, event=0xbfe20d44) at kernel/qcoreapplication.cpp:704
#23 0xb692f052 in QCoreApplication::sendEvent (receiver=0x9422ad0, event=0xbfe20d44, alienWidget=0x0, nativeWidget=0x9422ad0, buttonDown=0xb726d918, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#24 QApplicationPrivate::sendMouseEvent (receiver=0x9422ad0, event=0xbfe20d44, alienWidget=0x0, nativeWidget=0x9422ad0, buttonDown=0xb726d918, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#25 0xb69ba5b8 in QETWidget::translateMouseEvent (this=0x9422ad0, event=0xbfe21190) at kernel/qapplication_x11.cpp:4302
#26 0xb69b95ab in QApplication::x11ProcessEvent (this=0xbfe22658, event=0xbfe21190) at kernel/qapplication_x11.cpp:3379
#27 0xb69e76f2 in x11EventSourceDispatch (s=0x9246e40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0xb55312e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#29 0xb5535000 in ?? () from /lib/libglib-2.0.so.0
#30 0xb5535198 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#31 0xb648d2f5 in QEventDispatcherGlib::processEvents (this=0x921ec20, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#32 0xb69e7255 in QGuiEventDispatcherGlib::processEvents (this=0x921ec20, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0xb645ff09 in QEventLoop::processEvents (this=0xbfe21480, flags=) at kernel/qeventloop.cpp:149
#34 0xb646035a in QEventLoop::exec (this=0xbfe21480, flags=...) at kernel/qeventloop.cpp:201
#35 0xb6dc72fe in QMenu::exec (this=0x9422ad0, p=..., action=0x0) at widgets/qmenu.cpp:2063
#36 0xb77681c7 in Akonadi::EntityTreeView::contextMenuEvent (this=0x9301788, event=0xbfe21ebc) at ../../akonadi/entitytreeview.cpp:254
#37 0xb69875b8 in QWidget::event (this=0x9301788, event=0xbfe21ebc) at kernel/qwidget.cpp:8165
#38 0xb6d7f4a3 in QFrame::event (this=0x9301788, e=0xbfe21ebc) at widgets/qframe.cpp:557
#39 0xb6e19a32 in QAbstractScrollArea::viewportEvent (this=0xb61d93c0, e=0x0) at widgets/qabstractscrollarea.cpp:1036
#40 0xb6ece5c7 in QAbstractItemView::viewportEvent (this=0x9301788, event=0xbfe21ebc) at itemviews/qabstractitemview.cpp:1610
#41 0xb6f0f95c in QTreeView::viewportEvent (this=0x9301788, event=0xbfe21ebc) at itemviews/qtreeview.cpp:1248
#42 0xb6e1c415 in QAbstractScrollAreaPrivate::viewportEvent (this=0x9309960, o=0x92f4938, e=0xbfe21ebc) at widgets/qabstractscrollarea_p.h:100
#43 QAbstractScrollAreaFilter::eventFilter (this=0x9309960, o=0x92f4938, e=0xbfe21ebc) at widgets/qabstractscrollarea_p.h:116
#44 0xb6460b8a in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x923db10, receiver=0x92f4938, event=0xbfe21ebc) at kernel/qcoreapplication.cpp:819
#45 0xb6928bc9 in QApplicationPrivate::notify_helper (this=0x923db10, receiver=0x92f4938, e=0xbfe21ebc) at kernel/qapplication.cpp:4296
#46 0xb692fb70 in QApplication::notify (this=0xbfe22658, receiver=0x92f4938, e=0xbfe21ebc) at kernel/qapplication.cpp:3944
#47 0xb74d37da in KApplication::notify (this=0xbfe22658, receiver=0x92f4938, event=0xbfe21ebc) at ../../kdeui/kernel/kapplication.cpp:302
#48 0xb64618eb in QCoreApplication::notifyInternal (this=0xbfe22658, receiver=0x92f4938, event=0xbfe21ebc) at kernel/qcoreapplication.cpp:704
#49 0xb69bfbbe in QCoreApplication::sendSpontaneousEvent (receiver=0x92f4938, event=0x0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#50 0xb69ba102 in QETWidget::translateMouseEvent (this=0x92da4b0, event=0xbfe222e0) at kernel/qapplication_x11.cpp:4373
#51 0xb69b95ab in QApplication::x11ProcessEvent (this=0xbfe22658, event=0xbfe222e0) at kernel/qapplication_x11.cpp:3379
#52 0xb69e76f2 in x11EventSourceDispatch (s=0x9246e40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#53 0xb55312e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#54 0xb5535000 in ?? () from /lib/libglib-2.0.so.0
#55 0xb5535198 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#56 0xb648d2f5 in QEventDispatcherGlib::processEvents (this=0x921ec20, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#57 0xb69e7255 in QGuiEventDispatcherGlib::processEvents (this=0x921ec20, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#58 0xb645ff09 in QEventLoop::processEvents (this=0xbfe225d4, flags=) at kernel/qeventloop.cpp:149
#59 0xb646035a in QEventLoop::exec (this=0xbfe225d4, flags=...) at kernel/qeventloop.cpp:201
#60 0xb64644ef in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#61 0xb6928c87 in QApplication::exec () at kernel/qapplication.cpp:3579
#62 0x0804c63d in main (argc=1, argv=0xbfe22754) at ../../kaddressbook/main.cpp:58

If kaddressbook is embedded within kontact then this same bug will crash the whole of kontact.

There is another issue with the copy functionality, if you right click on a contact and copy it, then paste it in dolphin it creates a vcf file (which is nice) but in kaddressbook the contact remains greyed out and can't be accessed/edited/highlighted any more. Same issue if you were to select copy but then change you're mind, the contact is stuck in a "marked for copying" state. Perhaps this should be reported as a separate bug?
Comment 1 Tobias Koenig 2010-05-15 09:27:37 UTC
SVN commit 1126984 by tokoe:

Do not crash when try to editing a contact, marked for copy

BUG: 237689


 M  +9 -0      standardcontactactionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1126984
Comment 2 Christophe Marin 2010-07-05 14:27:52 UTC
*** Bug 243539 has been marked as a duplicate of this bug. ***