Do not crash when try to editing a contact, marked for copy

BUG: 237689

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1126984